[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/audiolog.png" type="Texture" id=1]
[ext_resource path="res://pickups/audiolog.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/audio-pickup.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.08276

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.193798, 0.364341, 0.511628, 0.651163, 0.790698, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.470588, 0.113725, 0.309804, 1, 0.8, 0.184314, 0.482353, 1, 0.309804, 0.643137, 0.721569, 1, 0.227451, 0.247059, 0.368627, 1, 1, 0.933333, 0.513726, 1, 1, 0.933333, 0.513726, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -1, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[node name="AudioLog" type="Area2D"]
collision_layer = 2048
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 10
lifetime = 2.0
process_material = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="Sounds" type="Node" parent="."]

[node name="Pickup" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_HealthPack_body_entered"]
